crates/tlang_test_runner/src/snapshots/tlang_test_runner__tests__known_failures_counter_closures_javascript@known_failures__counter_closures.tlang.snap
---
source: crates/tlang_test_runner/src/main.rs
description: Known failure - output may not match expected
expression: apply_redactions(&output)
input_file: tests/known_failures/counter_closures.tlang
---
[stdin]:215
    return if (times > 0) {
           ^^
Expression expected

SyntaxError: Unexpected token 'if'
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:393:10)
    at evalTypeScript (node:internal/process/execution:261:22)
    at node:internal/main/eval_stdin:51:5
    at Socket.<anonymous> (node:internal/process/execution:206:5)
    at Socket.emit (node:events:519:35)
    at endReadableNT (node:internal/streams/readable:1701:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21)

Node.js v24.0.2
